# shai

./: Cargo.toml  README.md
src/: executor.rs  llm.rs  main.rs  rag.rs  setup.rs  shell.rs
