[package]
name = "shai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
encoding_rs = "0.8.35"
hf-hub = "0.5.0"
llama-cpp-2 = "0.1.138"
reqwest = { version = "0.13.2", features = ["stream"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
